--- a/Step05/19_change_quest.html
+++ b/Step05/19_change_quest.html
@@ -13,6 +13,10 @@
             else
                 document.querySelector('#area').innerHTML = '';
             }
+
+            document.querySelector('#email').onchange = function(){
+                console.log(this.value);
+            }
         }
     </script>
 </head>
