--- a/Step07/03_jquery_selector_tag.html
+++ b/Step07/03_jquery_selector_tag.html
@@ -8,7 +8,18 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-       
+       $(function(){
+        //p 태그 선택해서 배경색을 파랑색으로 지정, 글자색은 빨강
+        // document.querySelectorAll('p').forEach(item => {
+        //     item.style.backgroundColor = 'blue';
+        //     item.style.color = 'red';
+        // });
+        //선택자 사용방법 : $('선택자') --> html 요소들을 선택
+        // $('p').css('background-color','blue').css('color','red');
+        $('p').css({'background-color':'blue','color' : 'red'});
+        //h2 선택 - 글자색을 파랑색으로 변경
+        $('h2').css('color','blue');
+       });
 
     </script>
 </head>
