--- a/Step07/05_jquery_selector_class.html
+++ b/Step07/05_jquery_selector_class.html
@@ -9,7 +9,13 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-     
+        $(function(){
+            //클래스 under 선택, 밑줄을 지정
+            $('.under').css('text-decoration', 'underline');
+            // $('.under').css({'text-decoration' : 'underline'});
+            //클래스 skyblue 선택, 배경색을 skyblue로 지정
+            $('.skyblue').css('background-color','skyblue');
+        })
     </script>
 </head>
 
