--- a/Step07/09_jquery_selector_4.html
+++ b/Step07/09_jquery_selector_4.html
@@ -8,7 +8,15 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-      
+      $(function(){
+        // document.querySelector('.txt1').parentNode.style.border = '1px solid black';
+        //부모 요소 선택
+        $('.txt1').parent().css('border','1px solid black');
+        $('.txt1').parent().parent().css('border','1px solid red');
+        //모든 부모 요소 선택
+        $('.txt2').parents().css('border','1px dashed blue');
+        $('.txt2').parents('div').css('border', '5px dashed green');
+      })
     </script>
     <style>
         section,
