--- a/Step07/11_jquery_selector_6.html
+++ b/Step07/11_jquery_selector_6.html
@@ -7,7 +7,12 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-      
+      $(function(){
+            //짝수번째 배경색은 녹색 nth-child
+            $('li:nth-child(2n)').css('background-color','green');
+            //홀수번째 배경색은 노랑
+            $('li:nth-child(2n+1)').css('background-color','yellow');
+        });
     </script>
 </head>
 <body>
