--- a/Step07/12_jquery_selector_7.html
+++ b/Step07/12_jquery_selector_7.html
@@ -7,7 +7,12 @@
     <title>jQuery</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-        
+        $(function(){
+            //인덱스 번호가 2인 요소를 선택
+            $('ul li').eq(2).css('background-color','orange');//무리별 X, 선택된 것을 기준
+            $('ul li:gt(2)').css('color','red');
+            $('ul li:lt(2)').css('color','blue');
+        })
     </script>
 </head>
 <body>
