--- a/Step07/13_jquery_selector_8.html
+++ b/Step07/13_jquery_selector_8.html
@@ -7,7 +7,14 @@
     <title>jQuery</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-      
+      $(function(){
+            //형제 요소가 없는 것만 선택
+            $("li:only-child").css('background-color','yellow');
+            //시작번호부터 마지막 인덱스번호 전까지 선택
+            //1번 인덱스부터 3번 인덱스 전까지 선택
+            // $('#ul_1 li:eq(0)').nextUntil('#ul_1 li:eq(3)').css('background-color','red');
+            $('#ul_1 li').slice(1,3).css('background-color','red');
+        })
     </script>
 </head>
 <body>
