--- a/Step08/02_jquery_attr.html
+++ b/Step08/02_jquery_attr.html
@@ -9,7 +9,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
+          //attr 함수는 속성값을 읽거나 추가 수정, 사용하는 함수
+          //attr('속성명') --> 해당 속성의 값을 읽어옴
+          console.log($('a').attr('href'));  
+          //a태그에 target 속성 추가, _blank로 설정
+          $('a').attr('target','_blank');
           
+          //input 태그에 속성값으로 id = txt, placeholder=텍스트 입력
+          $('input').attr({
+                'id' : 'txt',
+                'placeholder':'텍스트 입력'
+            });
+            //속성명만 들어가는 경우
+            $('input').attr('readonly','true');
+            //속성 제거
+            $('input').removeAttr('name');
        });
     </script>
 </head>
