--- a/Step08/02_jquery_prop.html
+++ b/Step08/02_jquery_prop.html
@@ -9,14 +9,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
-          
-       });
+            //attribute : HTML 문서에서 설정된 속성(정적인 속성) - default값
+            //property : HTML 문서에서 동적인 속성(웹페이지 실행 중에 사용 및 변경되는 값)
+            //property가 바뀌어도 attribute로 설정된 값은 유지가 됨
+            console.log($("#chk").attr('checked'),$('#chk').prop('checked'));
+
+            $('#chk').click(function(){
+                console.log($("#chk").attr('checked'),$('#chk').prop('checked'));
+            });
+            $('#txt').keyup(function(){
+                console.log($("#txt").attr('value'),$('#txt').prop('value'));
+            });
+        });
     </script>
 </head>
 
 <body>
     <input type="checkbox" name="chk" id="chk" value="test"> 
     <label for="chk">체크 박스</label>
+    <hr>
+    <input type="text" value="attribute 값" id="txt">
 </body>
 
 </html>
