val, html, text

--- a/Step08/04_jquery_val.html
+++ b/Step08/04_jquery_val.html
@@ -10,7 +10,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
-         
+            //txt에 입력한 value값 로그로 출력
+            console.log($("#txt").attr("value"),$("#txt").prop("value"),$("#txt").val());
+            $("#btn").click(function(){
+                //val --> Property 값을 읽어옴, 바꿈
+                $("#txt").val("안녕하세요");
+                console.log($("#txt").attr("value"),$("#txt").prop("value"),$("#txt").val());
+            });
         });
     </script>
 </head>
